--- a/TwitterClient/app/src/main/AndroidManifest.xml
+++ b/TwitterClient/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".welcome.WelcomeActivity"
+            android:theme="@style/NoActionBar_Welcome"/>
+        <activity
             android:name=".timeline.TimelineActivity"
             android:theme="@style/NoActionBar_Timeline"/>
         <activity
